<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_standard">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sale_qty_button"
        android:layout_width="@dimen/button_length"
        android:layout_height="@dimen/button_length"
        android:background="@drawable/button_rounded_corners"
        android:focusable="false"
        android:maxLines="1"
        android:textColor="@android:color/white"
        app:autoSizeMaxTextSize="@dimen/text_extra_large"
        app:autoSizeMinTextSize="@dimen/text_large"
        app:autoSizeStepGranularity="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name"
        style="@style/standard_text_view"
        android:layout_marginStart="@dimen/margin_standard"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toEndOf="@+id/sale_qty_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_size"
        style="@style/standard_text_view"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/title_dollar"
        style="@style/standard_text_view"
        android:layout_marginStart="@dimen/margin_standard"
        android:text="@string/dollar"
        android:textSize="@dimen/text_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_size"
        app:layout_constraintStart_toEndOf="@+id/item_size" />

    <TextView
        android:id="@+id/item_price"
        style="@style/standard_text_view"
        android:textSize="@dimen/text_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/title_dollar"
        app:layout_constraintStart_toEndOf="@+id/title_dollar" />

    <TextView
        android:id="@+id/title_each"
        style="@style/standard_text_view"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/each"
        android:textSize="@dimen/text_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
        app:layout_constraintStart_toEndOf="@+id/item_price" />

    <TextView
        android:id="@+id/title_inventory_date"
        style="@style/standard_text_view"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/timestamp"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_size"
        app:layout_constraintTop_toBottomOf="@+id/item_size" />

    <TextView
        android:id="@+id/item_date"
        style="@style/standard_text_view"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/title_inventory_date"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/title_inventory_date" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/navigation_next"
        android:src="@drawable/ic_navigate_next"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>